--- a/css/fontello/demo.html
+++ b/css/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?70544926');
-      src: url('./font/fontello.eot?70544926#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?70544926') format('woff'),
-           url('./font/fontello.ttf?70544926') format('truetype'),
-           url('./font/fontello.svg?70544926#fontello') format('svg');
+      src: url('./font/fontello.eot?1107521');
+      src: url('./font/fontello.eot?1107521#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?1107521') format('woff'),
+           url('./font/fontello.ttf?1107521') format('truetype'),
+           url('./font/fontello.svg?1107521#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -256,11 +256,25 @@
         <div class="span3" title="Code: 0xe80c">
           <i class="demo-icon icon-play">&#xe80c;</i> <span class="i-name">icon-play</span><span class="i-code">0xe80c</span>
         </div>
+        <div class="span3" title="Code: 0xe80d">
+          <i class="demo-icon icon-right-open-mini">&#xe80d;</i> <span class="i-name">icon-right-open-mini</span><span class="i-code">0xe80d</span>
+        </div>
+        <div class="span3" title="Code: 0xe80e">
+          <i class="demo-icon icon-th">&#xe80e;</i> <span class="i-name">icon-th</span><span class="i-code">0xe80e</span>
+        </div>
         <div class="span3" title="Code: 0xf051">
           <i class="demo-icon icon-facebook-circled">&#xf051;</i> <span class="i-name">icon-facebook-circled</span><span class="i-code">0xf051</span>
         </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xf164">
+          <i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span>
+        </div>
         <div class="span3" title="Code: 0xf167">
           <i class="demo-icon icon-youtube">&#xf167;</i> <span class="i-name">icon-youtube</span><span class="i-code">0xf167</span>
+        </div>
+        <div class="span3" title="Code: 0xf16a">
+          <i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span>
         </div>
         <div class="span3" title="Code: 0xf16d">
           <i class="demo-icon icon-instagram-1">&#xf16d;</i> <span class="i-name">icon-instagram-1</span><span class="i-code">0xf16d</span>
