--- a/css/fontello/demo.html
+++ b/css/fontello/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?1107521');
-      src: url('./font/fontello.eot?1107521#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?1107521') format('woff'),
-           url('./font/fontello.ttf?1107521') format('truetype'),
-           url('./font/fontello.svg?1107521#fontello') format('svg');
+      src: url('./font/fontello.eot?78220771');
+      src: url('./font/fontello.eot?78220771#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?78220771') format('woff'),
+           url('./font/fontello.ttf?78220771') format('truetype'),
+           url('./font/fontello.svg?78220771#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -262,11 +262,14 @@
         <div class="span3" title="Code: 0xe80e">
           <i class="demo-icon icon-th">&#xe80e;</i> <span class="i-name">icon-th</span><span class="i-code">0xe80e</span>
         </div>
-        <div class="span3" title="Code: 0xf051">
-          <i class="demo-icon icon-facebook-circled">&#xf051;</i> <span class="i-name">icon-facebook-circled</span><span class="i-code">0xf051</span>
+        <div class="span3" title="Code: 0xe80f">
+          <i class="demo-icon icon-up-dir">&#xe80f;</i> <span class="i-name">icon-up-dir</span><span class="i-code">0xe80f</span>
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xf051">
+          <i class="demo-icon icon-facebook-circled">&#xf051;</i> <span class="i-name">icon-facebook-circled</span><span class="i-code">0xf051</span>
+        </div>
         <div class="span3" title="Code: 0xf164">
           <i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span>
         </div>
@@ -276,11 +279,11 @@
         <div class="span3" title="Code: 0xf16a">
           <i class="demo-icon icon-youtube-play">&#xf16a;</i> <span class="i-name">icon-youtube-play</span><span class="i-code">0xf16a</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xf16d">
           <i class="demo-icon icon-instagram-1">&#xf16d;</i> <span class="i-name">icon-instagram-1</span><span class="i-code">0xf16d</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf279">
           <i class="demo-icon icon-map">&#xf279;</i> <span class="i-name">icon-map</span><span class="i-code">0xf279</span>
         </div>
