어색한 부분 좀 고침

--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
   <link rel="stylesheet" href="js/swiper/swiper.min.css">
   <script defer src="js/swiper/swiper.min.js"></script>
 
-  <script defer type="text/javascript" src="js/jquery.min.js"></script>
-  <script defer type="text/javascript" src="js/script.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <script defer src="js/jquery.min.js"></script>
+  <script defer src="js/script.js"></script>
 </head>
 
 <body>
   <!-- <div class="modal"></div> -->
 
   <div id="home" class="wrap">
-    <!-- gnb__sub__site-map---sony site -->
+    <!-- gnb-sub__site-map---sony site -->
     <section class="sony-site">
       <div class="__container">
 
@@ -135,7 +136,6 @@
             <li>
               <a id="depth2" href="#">
                 <span>전자제품</span>
-                
                 <i class="icon-down-open-mini"></i>
               </a>
             </li>
@@ -143,10 +143,10 @@
             <li><a href="#">제품지원</a></li>
           </ul>
 
-          <ul class="gnb__sub">
-            <li><a class="gnb__sub-liked icon-heart" href="#"></a></li>
+          <ul class="gnb-sub">
+            <li><a class="gnb-sub-liked icon-heart" href="#"></a></li>
             <li>
-              <button class="gnb__sub-search">
+              <button class="gnb-sub-search">
                 <span class="-txt">소니 검색</span>
                 <i class="icon-search"></i>
               </button>
@@ -155,7 +155,7 @@
                 <div class="search-wrap-a">
                   <i class="icon-up-dir"></i>
                 </div>
-                <form action="" method="GET" id="search-form">
+                <form action="" method="post" id="search-form">
                   <label for="search-txt">소니 검색</label>
                   <input placeholder="검색" type="text" name="" id="search-txt">
                   <input class="form-cancel" type="reset" value="✖">
@@ -164,7 +164,7 @@
             </li>
 
             <li>
-              <button class="gnb__sub-site-map">
+              <button class="gnb-sub-site-map">
                 <span class="-txt">소니 사이트</span>
                 <i class="icon-map"></i>
               </button>
@@ -178,7 +178,7 @@
         <div class="__container">
           <!-- depth2-menu -->
           <div class="depth2-menus">
-            <ul class="mns-box">
+            <ul class="menus-box">
               <em>오디오 <i class="icon-right-open-mini"></i></em>
               <div class="--box-c">
                 <li><a href="#">헤드폰</a></li>
@@ -186,9 +186,9 @@
                 <li><a href="#">하이 레졸루션 오디오</a></li>
                 <li><a href="#">무선 스피커</a></li>
               </div>
-              <a href="#" class="mns-link-all">모두보기</a>
+              <a href="#" class="menus-link-all">모두보기</a>
             </ul>
-            <ul class="mns-box">
+            <ul class="menus-box">
               <em>카메라 <i class="icon-right-open-mini"></i></em>
               <div class="--box-c">
                 <li><a href="#">모든 카메라 제품</a></li>
@@ -196,9 +196,9 @@
                 <li><a href="#">렌즈</a></li>
                 <li><a href="#">컴팩트 카메라</a></li>
               </div>
-              <a href="#" class="mns-link-all">모두보기</a>
+              <a href="#" class="menus-link-all">모두보기</a>
             </ul>
-            <ul class="mns-box">
+            <ul class="menus-box">
               <em>비디오 <i class="icon-right-open-mini"></i></em>
               <div class="--box-c">
                 <li><a href="#">모든 비디오 카메라 제품</a></li>
@@ -206,24 +206,24 @@
                 <li><a href="#">액션 카메라</a></li>
                 <li><a href="#">전문가용 비디오 카메라</a></li>
               </div>
-              <a href="#" class="mns-link-all">모두보기</a>
+              <a href="#" class="menus-link-all">모두보기</a>
             </ul>
-            <ul class="mns-box">
+            <ul class="menus-box">
               <em>카 오디오 <i class="icon-right-open-mini"></i></em>
               <div class="--box-c">
                 <li><a href="#">모든 차량용 및 해상용 제품</a></li>
                 <li><a href="#">수신기 및 플레이어</a></li>
                 <li><a href="#">앰프</a></li>
               </div>
-              <a href="#" class="mns-link-all">모두보기</a>
+              <a href="#" class="menus-link-all">모두보기</a>
             </ul>
-            <ul class="mns-box">
+            <ul class="menus-box">
               <em>스토리지 및 케이블 <i class="icon-right-open-mini"></i></em>
               <div class="--box-c">
                 <li><a href="#">모든 에너지, 스토리지, 케이블 제품</a></li>
                 <li><a href="#">메모리 카드 및 SSD</a></li>
               </div>
-              <a href="#" class="mns-link-all">모두보기</a>
+              <a href="#" class="menus-link-all">모두보기</a>
             </ul>
             
           </div>
